--- a/class-13-production-deployment/pair-assignment/starter-code/package.json
+++ b/class-13-production-deployment/pair-assignment/starter-code/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.3",
-    "express-request-proxy": "^1.0.10"
+    "express-request-proxy": "^1.0.10",
+    "foobar": "^1.1.0"
   }
 }
